scss: minor fix for navbar on mobile

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -83,4 +83,14 @@ a:hover {
   text-shadow: 0px 0px 5px #ffffff;
 }
 
+
+/* Fix for the navbar on mobile */
+.article__header--overlay {
+  .overlay {
+    @include media-breakpoint-down(md) {
+      padding-top: map-get($spacers, 5) * 2;
+    }
+  }
+}
+
 /* end custom scss snippet */
